# Wheeler

./: LICENSE  README  Wheeler.cabal
examples/: Test.hs
src/Math/Symbolic/: Wheeler.hs
src/Math/Symbolic/Wheeler/: Annotation.hs  Basic.hs  Canonicalize.hs  Canonicalize.hs-boot  CanonicalizeDebug.hs  Common.hs  Commutativity.hs  Complexity.hs  Debug.hs  DiracSpinor.hs  DiracSpinor.hs-boot  DummyIndices.hs  Expr.hs  Expr.hs-boot  FactorOut.hs  Function.hs  IO.hs  Indexed.hs  Indexed.hs-boot  Matchable.hs  Matcher.hs  Matcher2.hs  MetricTensor.hs  Minkowski.hs  Named.hs  Numeric.hs  NumericRational.hs  Pattern.hs  Precedence.hs  Replacer.hs  Rules.hs  SimpleSymbol.hs  SumOrd.hs  Symbol.hs  Symbol.hs-boot  Tensor.hs  Tensor.hs-boot  TensorBasics.hs  TensorComponents.hs  TensorSymmetries.hs  (+3 more)
src/cbits/: xperm.c
