Name:                Wheeler
Version:             0.1
Description:         Wheeler library for symbolic tensor algebra
License:             BSD3
License-file:        LICENSE
Author:              Gregory Wright
Maintainer:          gwright@antiope.com
Build-Type:          Simple
Cabal-Version:       >=1.2
   
Flag developer
  description: operate in developer mode
  default: False

Library
  Hs-Source-Dirs:
    src

  Exposed-modules:
    Math.Symbolic.Wheeler
    Math.Symbolic.Wheeler.Basic
    Math.Symbolic.Wheeler.Canonicalize
    Math.Symbolic.Wheeler.CanonicalizeDebug
    Math.Symbolic.Wheeler.Commutativity
    Math.Symbolic.Wheeler.DummyIndices
    Math.Symbolic.Wheeler.Expr
    Math.Symbolic.Wheeler.IO
    Math.Symbolic.Wheeler.Numeric
    Math.Symbolic.Wheeler.Symbol
    Math.Symbolic.Wheeler.Tensor
    Math.Symbolic.Wheeler.TensorBasics
    Math.Symbolic.Wheeler.TensorUtilities
    Math.Symbolic.Wheeler.DiracSpinor
    Math.Symbolic.Wheeler.Minkowski

    Math.Symbolic.Wheeler.Annotation
    Math.Symbolic.Wheeler.Complexity
    Math.Symbolic.Wheeler.Debug
    Math.Symbolic.Wheeler.Function
    Math.Symbolic.Wheeler.Indexed
    Math.Symbolic.Wheeler.Named
    Math.Symbolic.Wheeler.NumericRational
    Math.Symbolic.Wheeler.Precedence
    Math.Symbolic.Wheeler.SumOrd
    Math.Symbolic.Wheeler.SimpleSymbol
    Math.Symbolic.Wheeler.TensorSymmetries
    Math.Symbolic.Wheeler.TensorComponents
    Math.Symbolic.Wheeler.UniqueID

  Build-Depends:
    base >= 3 && < 5,
    containers >= 0.4.1.0,
    mtl >= 2.0.1.0,
    parsec >= 3.1.1,
    uniqueid >= 0.1.1

  if flag(developer)
    Ghc-Options: -Werror
    Ghc-Prof-Options: -auto-all

  Ghc-Options: -Wall
